traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:43: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:46: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:49: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:52: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:55: error: Unmatched closing brace '}' ignored here
}
^